CE - fix for status filter header too large

--- a/foundations_ui/src/scss/views/select-column-filter.scss
+++ b/foundations_ui/src/scss/views/select-column-filter.scss
@@ -209,10 +209,16 @@
 .column-filter-list {
   border-bottom: 1px solid $color-border-bottom;
   border-top: 1px solid $color-border-bottom;
-  margin: 40px -15px 0px;
+  margin: 0px -15px 0px;
   padding: 15px;
   height: 250px;
   width: 100%;
   overflow: hidden;
   overflow-y: scroll;
+}
+
+.user-filter-container {
+  .column-filter-list {
+    margin: 40px -15px 0px;
+  }
 }
